calendar/backend-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-backend
  namespace: calendar
  labels:
    app: calendar-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-backend
  template:
    metadata:
      labels:
        app: calendar-backend
    spec:
      containers:
        - name: calendar-backend
          image: docker.prayujt.com/calendar-backend
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: calendar-backend
  namespace: calendar
  labels:
    app: calendar-backend
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: calendar-backend
  type: ClusterIP
