calendar/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-backend-ingress
  namespace: calendar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://*.prayujt.com"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type, X-Requested-With"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: calendar-backend
spec:
  rules:
    - host: api.calendar.prayujt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calendar-backend
                port:
                  name: http
  tls:
    - hosts:
        - api.calendar.prayujt.com
      secretName: calendar-backend-tls
