calendar/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-frontend-ingress
  namespace: calendar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
    nginx.ingress.kubernetes.io/auth-url: "http://proxy.hydra.svc.cluster.local:4180/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://proxy.prayujt.com/oauth2/start?rd=$scheme://$host$request_uri"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: calendar-frontend
spec:
  rules:
    - host: calendar.prayujt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calendar-frontend
                port:
                  name: http
  tls:
    - hosts:
        - calendar.prayujt.com
      secretName: calendar-frontend-tls
